# thesis-eye-metrics-core

./: pyproject.toml
config/: default.yaml
src/eye_metrics/: __init__.py  config.py  types.py
src/eye_metrics/features/: __init__.py  definitions.py  extraction.py  gaze.py  normalization.py  pupil.py
src/eye_metrics/preprocessing/: __init__.py  eye_selection.py  gaps.py  interpolation.py  outliers.py  pipeline.py
