[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eye-metrics"
version = "0.1.0"
description = "Shared eye-tracking preprocessing and feature extraction for cognitive workload research"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "PyWavelets>=1.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eye_metrics"]
